--- a/research-app/src/App.css
+++ b/research-app/src/App.css
@@ -14,6 +14,25 @@
 }
 
 .App-header {
+  width: 100%;
+  height: 60px;
+}
+
+.App-sidebar {
+  float:left;
+  flex: 0 1 20%; /* Responsive width: Takes 20% of the available width */
+}
+
+.App-content {
+  flex: 1 1 0%; /* flex-grow: 1, flex-shrink: 1, flex-basis: 0%  */
+}
+
+.App-footer {
+  width: 100%;
+  height: 60px;
+}
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +41,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
